# Householder-QR

./: CMakeLists.txt  README.md  householder.c  line_plot.py  main.c  main_seq.c  my_house.c  utils.c  utils.h  utils_seq.c
project/: Makefile  main  main.c  util.h
test_matlab/: svd_rec.c
